Fix to allow missing chapters.  Making sure all content is imported even though may be in wrong chunk.  Improved USFM import test.